[gd_scene load_steps=2 format=3 uid="uid://csettings001"]

[ext_resource type="Script" path="res://src/ui/settings_menu.gd" id="1_script"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GodModeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GodModeLabel" type="Label" parent="VBoxContainer/GodModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "God Mode"

[node name="GodModeCheck" type="CheckBox" parent="VBoxContainer/GodModeContainer"]
layout_mode = 2

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="MusicValue" type="Label" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "70%"
horizontal_alignment = 2

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="SFXValue" type="Label" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "70%"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="toggled" from="VBoxContainer/GodModeContainer/GodModeCheck" to="." method="_on_god_mode_check_toggled"]
[connection signal="value_changed" from="VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
